package action;

public interface IAction {
    void execute();
}
